cabal-version:      2.4
name:               hage
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Haskell age encryption library and tool

-- A longer description of the package.
description:
  This is a Haskell implementation of age: a simple, modern and secure file encryption tool, format, and library. See https://github.com/FiloSottile/age

-- A URL where users can report bugs.
bug-reports:        https://github.com/hercules-ci/hage/issues

license:            BSD-3-Clause
author:             Robert Hensing
maintainer:         robert@roberthensing.nl

copyright:          Copyright 2022-... Ensius B.V.
category:           Cryptography
extra-source-files: CHANGELOG.md

common lang
    default-language: Haskell2010
    default-extensions: BlockArguments ScopedTypeVariables

executable hage
    import:           lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.15.1.0,
      optparse-applicative,
    hs-source-dirs:   app
