cabal-version:      2.4
name:               hage
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Haskell age encryption library and tool

-- A longer description of the package.
description:
  This is a Haskell implementation of age: a simple, modern and secure file encryption tool, format, and library. See https://github.com/FiloSottile/age

-- A URL where users can report bugs.
bug-reports:        https://github.com/hercules-ci/hage/issues

license:            BSD-3-Clause
author:             Robert Hensing
maintainer:         robert@roberthensing.nl

copyright:          Copyright 2022-... Ensius B.V.
category:           Cryptography
extra-source-files: CHANGELOG.md

common lang
    default-language: Haskell2010
    default-extensions:
      BlockArguments
      DerivingStrategies
      FlexibleInstances
      GeneralizedNewtypeDeriving
      LambdaCase
      OverloadedStrings
      ScopedTypeVariables
      TupleSections
      TypeApplications

library
    import:           lang
    hs-source-dirs:   lib
    ghc-options: -Wall
    exposed-modules:
      Crypto.Hage
      Crypto.Hage.FileKey
      Crypto.Hage.Format
      Crypto.Hage.Payload
      Crypto.Hage.Recipient.X25519

    build-depends:
      base,
      base64-bytestring,
      bech32,
      bytestring,
      conduit,
      cryptonite,
      memory,
      text,

test-suite tests
    import:           lang
    type:             exitcode-stdio-1.0
    hs-source-dirs:
      -- This allows cabal v2-repl and ghcid to reload the implementation
      lib
      test-suite
    main-is:          TestMain.hs
    other-modules:
      Crypto.Hage
      Crypto.Hage.FileKey
      Crypto.Hage.Format
      Crypto.Hage.Payload
      Crypto.Hage.Recipient.X25519

    build-depends:
      base,
      base64-bytestring,
      bech32,
      bytestring,
      conduit,
      cryptonite,
      filepath,
      hspec,
      memory,
      QuickCheck,
      shelly,
      temporary,
      text

executable hage
    import:           lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
      ApplicativeDo

    build-depends:
      base ^>=4.15.1.0,
      bytestring,
      conduit,
      filepath,
      hage,
      optparse-applicative,
      text,
    hs-source-dirs:   app
